--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+-------------------------- aqp 0.94 (2010-08-11) --------------------------
+* fixed bug in soil.slot() when aggregating a categorical variable,
+  with a user-supplied segmenting vector
+* soil.slot() now requires that categorical variables be encoded as factors
+
+-------------------------- aqp 0.93 (2010-08-07) --------------------------
+* bug fixes, new documentation + examples
+* AQP now requires R >= 2.9.0
+
+-------------------------- aqp 0.92 (2010-08-03) --------------------------
+* including a new column in the results from soil.slot(), 
+  denoting number of profiles used in slice-wise aggregation
+* added note to soil.slot() manual page highlighting possible problems with SD calculation
+
 -------------------------- aqp 0.90 (2010-07-13) --------------------------
 * better error checking on profile aggregation and classification functions
 * most functions now require that horizon depths are integers
