--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+-------------------------- aqp 0.99-4 (2011-08-15) --------------------------
+* code and documentation clean-up
+* Soil Sata Access (SDA) query functions have been added
+  - mapunit_geom_by_ll_bbox() : get map unit geometry by bounding box
+  - MUKEYS_by_ll_bbox() : get map unit keys by bounding box
+  - SDA_query() : retrieve soil tabular data via query written in SQL
+* additional customizations added to profile_plot
+* two new sample data sets + examples
+
 -------------------------- aqp 0.99-1 (2011-01-26) --------------------------
 * soil.slot() and profile_compare() now have support for parallel computation thanks to bug-fixes in plyr 1.4
   - plyr >= 1.4, foreach, and doMC packages are required
