--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+-------------------------- aqp 0.99-9.1 (2011-12-27) --------------------------
+* pedonPC, NASIS, and SDA functions moved *out* of aqp, and *into* new package: soilDB
+  - removed assocated, suggested packages from aqp
+  - soilDB will be on CRAN shortly
+* new argument to plot(SoilProfileCollection, ..., divide.hz=TRUE|FALSE) tha can optionally suppress 
+  plotting of dividing lines between horizons (suggested by Ludwig Hilger)
+* new function profileApply() for applying functions by profile
+
 -------------------------- aqp 0.99-9 (2011-12-22) --------------------------
 * almost ready for AQP 1.0, vignettes are the last missing piece :)
 * slice(SPC, ...) is now 10-100x faster, scales linearly
