--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,27 @@
--------------------------- aqp 0.99-9.4 (2012-01-12) --------------------------
+-------------------------- aqp 1.0 (2012-03-26) --------------------------
+* 1.0 release, still missing condensed vignettes- should be ready soon
+* see http://casoilresource.lawr.ucdavis.edu/drupal/taxonomy/term/56 for samples
+* A small bug in profile_compare() was fixed, where slices were evaluated as 'soil' based on the bottom depth of the profile, and NOT on the presence of actual data. See ?profile_compare for details. This change will have a minor affect on profile comparisons in cases where Cr or R horizons (usually missing most characterization data) have been extended down to some arbitrary depth (usually 150 or 200 cm) AND a maximum depth of evaluation (max_d) was set beyond the actual depth of most profiles in the collection.
+
+-------------------------- aqp 0.99-9.8 (2012-03-02) --------------------------
+* profile_compare() will now use site-level attributes if input is a SoilProfileCollection
+  - horizon / site level data currently weighted equally
+  - NOTE: this feature is new, test-first!
+* minor bug fixes in profile_compare() to remove spurious warnings
+* better error check in slice()
+* removed old code and documentation: format_slices() and plot_slices()
+
+-------------------------- aqp 0.99-9.6 (2012-02-21) --------------------------
+* spurious warnings from profile_compare() caused by daisy() now suppressed
+  - warnings were generated when calling daisy() on a matrix of all NA
+    which typically occured when using too-large a lower depth for evaluation of D
+* preliminary support for diagnostic horizons via diagnostic_hz()
+* new examples
+* error and warnings messages cleaned-up
+
+-------------------------- aqp 0.99-9.52 (2012-01-31) --------------------------
+* converting all messages passed to the user from cat() to message() and warning()
+* profile_compare() and slab() now default to _no_ progress bars, see 'progress' argument to adjust
 * profileApply() now provides access to all aspects of the SoilProfileCollection object
   - that means that:
     profileApply(SPC, function(x) ... ) 
@@ -6,7 +29,7 @@
   !!! note that this may break functionality based on aqp 0.99-9.3
 
 -------------------------- aqp 0.99-9.4 (2012-01-09) --------------------------
-* 'site(SCP) <- d' now tries to merge data from SPC@site with 'd' via left join
+* `site(SCP) <- d` now tries to merge data from SPC@site with 'd' via left join
   - this means that all new SPC objects will have a single column of @site data, containin profile IDs
 * plot-SoilProfileCollection now tries to guess the best orientation of IDs
   - override with id.style='top' or id.style='side'
