--- a/TODO
+++ b/TODO
@@ -3,9 +3,12 @@ Urgent:
 ** ADD to all modules using data.frame, melt, ... ?
   ## important: change the default behavior of data.frame and melt
   opt.original <- options(stringsAsFactors = FALSE)
-  
+1. slab() breaks when use.wts=TRUE --> generalize and re-factor related code
 2. integrate color styling with 'scales' package in plot.SoilProfileCollection
 3. more aggressive checking of ordering / IDs
+4. Should we move to reshape2? It is faster. (PR)
+5. S4-cleanup of slice / slab / profile_compare
+6. concat methods for SPC objects
 
 Interesting:
 ------------
