--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+-------------------------- aqp 1.3 (2012-10-07) --------------------------
+* added rbind.SoilProfileCollection() for concatenating SPC objects
+  - this function performs basic sanity checks, but cannot combine unlike objects
+
+-------------------------- aqp 1.2-10 (2012-09-05) --------------------------
+* fixed minor bug in prepanel.depth_function() where an error would occur when input data was all NA
+
+-------------------------- aqp 1.2-9 (2012-08-31) --------------------------
+* new 'unique' method for SoilProfileCollection objects, returns indices of unique profiles
+* fixed bug in NAMESPACE that caused an error when 'sp' library wasn't loaded
+* added another sanity check to 'site<-' for cases where duplicates occur in the source data set
+* added some new documentation to package help page see 'help(aqp)' for details
+
+-------------------------- aqp 1.2-8 (2012-08-28) --------------------------
+* the names() method for SoilProfileCollection objects now returns a named list of horizon and site column names
+* improved examples: see ?sp4 and ?ca630
+* fixed minor bug related to subsetting a SoilProfileCollection object, followed by coercion to SpatialPointsDataFrame
+
 -------------------------- aqp 1.2-7 (2012-08-23) --------------------------
 * plot() method for SoilProfileCollection object no longer sets page margins, this will cause some figures to change
 * added demo 'slope_effect_hz_thickness'
