--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+-------------------------- aqp 1.4 (2012-12-18) --------------------------
+* new function simulate.SoilProfileCollection() for simulation based on a template soil profile, proper documentation pending...
+
+-------------------------- aqp 1.3-3 (2012-12-06) --------------------------
+* new function subsetProfiles() for simpler subsetting of SoilProfileCollection objects via site or horizon-level attributes
+* get.ml.hz() now returns a 'confidence' for each horizon (as a percent)
+* added experimental 'filter' argument to profile_compare()-- see manual page for usage
+* added new argument to plot.SoilProfileCollection()-- alt.label: used to add secondary labeling via data in @site
+* plot.SoilProfileCollection() will now do a better job of selecting the location for profile IDs based on label length, font size, and figure size
+
+-------------------------- aqp 1.3-2 (2012-11-01) --------------------------
+* minor tweaks to plot.SoilProfileCollection() for improved output with small/large size collections
+* new function get.ml.hz() attempts to determine the most likely horizonation after slabbing
+* fixed bug in profileApply() where further arguments to FUN weren't passed on to FUN
+* missing data report from profile_compare() now only includes horizons with some data (e.g. Cr and R horizons are skipped)
+
+-------------------------- aqp 1.3-1 (2012-10-17) --------------------------
+* speed-bump in profileApply()
+  - splitProfiles() function is no longer defined/used/needed
+* bug fix in SoilProfileCollection subsetting via []
+  - SoilProfiles with a single horizon confused subsetting in the presence of spatial data
+
 -------------------------- aqp 1.3 (2012-10-07) --------------------------
 * added rbind.SoilProfileCollection() for concatenating SPC objects
   - this function performs basic sanity checks, but cannot combine unlike objects
