--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,18 @@
+-------------------------- aqp 1.6 (2013-12-11) --------------------------
+* rbind.SoilProfileCollection() now re-orders data according to the new set of profile IDs
+  - this fixes several probles associated with assumptions in profile_compare()
+* profile_compare() will ne re-written soon to work natively with SPC objects
+
+-------------------------- aqp 1.5-6 (2013-11-25) --------------------------
+* new function addBracket() for annotating profile sketches with depth-brackets; useful for plotting diagnostic features
+
+-------------------------- aqp 1.5-6 (2013-11-15) --------------------------
+* new function missingDataGrid() for graphically describing the presence of missing data in an SPC object
+
 -------------------------- aqp 1.5-2 (2013-04-09) --------------------------
 * panel.depth_function() now prints "contributing fraction" values in the same color as corresponding depth-function lines and shaded areas
 * panel.depth_function() gains an argument 'cf.col' for manually specifying the CF color
-* panel.depth_function() gains an argument 'cf.interva;' for manually specifying printed CF depths
+* panel.depth_function() gains an argument 'cf.interval' for manually specifying printed CF depths
 * prepanel.depth_function() now extends x-lim by 5% in either direction for cleaner-looking plots
 * added some details to slab() documentation
 * fixed minor bug in min() and max() methods for SoilProfileCollection objects in the presence of missing data
@@ -18,7 +29,6 @@
 * new mini-vignette on dealing with bad data (dealing-with-bad-data.html)
 * better documentation for slice()
 * new warnings related to missing data in the grouping variable passed to slab()
-
 
 -------------------------- aqp 1.5 (2013-02-24) --------------------------
 * profileApply() can now return arbitrary objects = new subsetting/transformation possibilities
